# __COPYRIGHT__
# __FILE__ __REVISION__ __DATE__ __DEVELOPER__


                 SCons - a software construction tool

                            Change Log



RELEASE 0.97 - XXX

  From Steven Knight

  - XXX



RELEASE 0.96 - Wed, 18 Aug 2004 13:36:40 +0000

  From Chad Austin:

  - Make the CacheDir() directory if it doesn't already exist.

  - Allow construction variable substitutions in $LIBS specifications.

  - Allow the emitter argument to a Builder() to be or expand to a list
    of emitter functions, which will be called in sequence.

  - Suppress null values in construction variables like $LIBS that use
    the internal _concat() function.

  - Remove .dll files from the construction variables searched for
    libraries that can be fed to Win32 compilers.

  From Chad Austin and Christoph Wiedemann:

  - Add support for a $RPATH variable to supply a list of directories
    to search for shared libraries when linking a program.  Used by
    the GNU and IRIX linkers (gnulink and sgilink).

  From Charles Crain:

  - Restore the ability to do construction variable substitutions in all
    kinds of *PATH variables, even when the substitution returns a Node
    or other object.

  From Tom Epperly:

  - Allow the Java() Builder to take more than one source directory.

  From Ralf W. Grosse-Kunstleve:

  - Have SConsignFile() use, by default, a custom "dblite.py" that we can
    control and guarantee to work on all Python versions (or nearly so).

  From Jonathan Gurley:

  - Add support for the newer "ifort" versions of the Intel Fortran
    Compiler for Linux.

  From Bob Halley:

  - Make the new *FLAGS variable type work with copied Environments.

  From Chris Hoeppler:

  - Initialize the name of a Scanner.Classic scanner correctly.

  From James Juhasz:

  - Add support for the .dylib shared library suffix and the -dynamiclib
    linker option on Mac OS X.

  From Steven Knight:

  - Add an Execute() method for executing actions directly.
