@@ -12,7 +12,9 @@ RELEASE 0.97 - XXX
 
   From Steven Knight
 
-  - XXX
+  - Add a must_exist flag to Delete() to let the user control whether
+    it's an error if the specified entry doesn't exist.  The default
+    behavior is now to silently do nothing if it doesn't exist.
 
 
 
